# maxdirsize

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
