[package]
name = "maxdirsize"
version = "0.0.2"
edition = "2021"
authors = ["Alex Hortopan <alex@hortopan.com>"]
license = "MIT"
description = "Watches a directory size and alert if it exceeds a certain size remove older files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
envy = "0.4.1"
log = "0.4.0"
env_logger = "0.9.0"
colored = "2.0.0"

